released v1.5.3 - LayoutVertical content is now wrapped in container to prevent flex anomalies

--- a/src/client/components/Layout/LayoutVertical.scss
+++ b/src/client/components/Layout/LayoutVertical.scss
@@ -4,8 +4,7 @@
   justify-content: stretch;
   min-height: 100%;
 
-  > * {
-    display: flex;
+  > .content {
     flex: auto;
   }
 
